compiler/testData/diagnostics/tests/smartCasts/inference/kt39010_2.fir.kt
open class A<E> {
}

class B : A<String>() {
    fun foo() {}
}

interface KI {
    val a: A<*>
}

fun KI.bar() {
    if (a is B) {
        a.<!UNRESOLVED_REFERENCE!>foo<!>()
    }
}